<resources>
    <string name="app_name">GithubClient</string>
    <string name="main_search_profile">Search Profile</string>
    <string name="main_label_name">Name</string>
    <string name="main_label_location">Location</string>
    <string name="main_label_bio">bio</string>
    <string name="main_label_public_repos">Public repos</string>
    <string name="main_label_public_gists">Public gists</string>
    <string name="main_label_followers">Followers</string>
    <string name="main_label_following">Following</string>
</resources>
